--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,12 @@
 server.port = 7080
 
 #Database Properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/medico
+spring.datasource.username=postgres
+spring.datasource.password=root
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
