env.properties file added and put in git ignore

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@
 server.port = 7080
 
 #Database Properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/medico
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.config.import = env.properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_DATABASE}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
