--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### for env.properties ###
+/src/main/resources/env.properties
+
+
 ### STS ###
 .apt_generated
 .classpath
