Added User CRUD Basic Implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+
+#To Set Current Profile
+#spring.profiles.active=prod
+
+#Mapping properties
+currency-service.url=https://www.google.com
+currency-service.username=jayant
+currency-service.key=secretkey
+
+#To Expose All Endpoints Of Actuator
+#management.endpoints.web.exposure.include=*
+#More CPU and Resources are used, so we need to mention only required endpoints
+management.endpoints.web.exposure.include=health,metrics
